This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: The fallback to find the current frame in the gdb helpers fails for inlined frames
Type: Stage: resolved
Components: Interpreter Core Versions: Python 3.11
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: Mark.Shannon, pablogsal
Priority: normal Keywords: patch

Created on 2021-10-27 23:26 by pablogsal, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 29257 merged pablogsal, 2021-10-27 23:31
PR 29267 merged Mark.Shannon, 2021-10-28 12:21
PR 29515 merged pablogsal, 2021-11-10 12:23
Messages (4)
msg405140 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2021-10-27 23:26
This code does not work in the presence of inlined Python calls:

https://github.com/python/cpython/blob/d02ffd1b5c0fd8dec6dd2f7e3f2b0cfae48b7899/Tools/gdb/libpython.py#L1804-L1813
msg405183 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2021-10-28 12:59
New changeset f291404a802d6a1bc50f817c7a26ff3ac9a199ff by Mark Shannon in branch 'main':
bpo-45637: Store the frame pointer in the cframe (GH-29267)
https://github.com/python/cpython/commit/f291404a802d6a1bc50f817c7a26ff3ac9a199ff
msg406011 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2021-11-09 11:20
New changeset f4c03484da59049eb62a9bf7777b963e2267d187 by Pablo Galindo Salgado in branch 'main':
bpo-45637: Remove broken fallback in gdb helpers to obtain frame variable (GH-29257)
https://github.com/python/cpython/commit/f4c03484da59049eb62a9bf7777b963e2267d187
msg406096 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2021-11-10 13:41
New changeset 20205ad2b5be7eb3361224fd2502d1ba09c8ae4a by Pablo Galindo Salgado in branch 'main':
bpo-45637: Fix cframe-based fallback in the gdb helpers (GH-29515)
https://github.com/python/cpython/commit/20205ad2b5be7eb3361224fd2502d1ba09c8ae4a
History
Date User Action Args
2022-04-11 14:59:51adminsetgithub: 89800
2021-11-10 13:50:11pablogsalsetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2021-11-10 13:41:31pablogsalsetmessages: + msg406096
2021-11-10 12:23:53pablogsalsetpull_requests: + pull_request27767
2021-11-09 11:20:03pablogsalsetmessages: + msg406011
2021-10-28 12:59:15pablogsalsetmessages: + msg405183
2021-10-28 12:21:49Mark.Shannonsetpull_requests: + pull_request27530
2021-10-27 23:31:09pablogsalsetkeywords: + patch
stage: patch review
pull_requests: + pull_request27521
2021-10-27 23:26:30pablogsalcreate